# chords

./: Cargo.toml  README.md
chord_map_egui/: Cargo.toml
chord_map_egui/src/models/: chord_context.rs  mod.rs
chord_map_egui/src/widgets/: chord_box.rs  chord_edit.rs  chord_view.rs  mod.rs
chord_map_native/: Cargo.toml
chord_map_native/src/: main.rs
chord_map_native/src/models/: chord_ctx.rs  chord_map_state.rs  chord_view_context.rs  mod.rs
chord_map_native/src/ui/: mod.rs  static_ui.rs
chord_map_native/src/ui/app_widgets/: chord_edit_window.rs  chord_map_item.rs  mod.rs
note_lib/: Cargo.toml
note_lib/src/: lib.rs
note_lib/src/chord/: chord.rs  chord_builder.rs  chord_quality.rs  mod.rs
note_lib/src/chord_lib/: chord.rs  chord_builder.rs  chord_quality.rs
note_lib/src/interval/: compound_interval.rs  interval_quality.rs  simple_interval_from_semitones.rs
note_lib/src/interval_lib/: compound_interval.rs  interval.rs  interval_quality.rs  mod.rs  simple_interval.rs
note_lib/src/models/: chord.rs  chord_builder.rs  chord_quality.rs  mod.rs  note.rs  scale.rs
note_lib/src/note/: abstract_note.rs  mod.rs  note.rs  note_modifier.rs
note_lib/src/note_lib/: abstract_note.rs  modifier_preference.rs  note.rs  note_modifier.rs  raw_note.rs
note_lib/src/primatives/: mod.rs  octave.rs  semitone.rs
note_lib/src/scale/: interval.rs  mod.rs  scale.rs  scale_mode.rs  scale_mode_note_iter.rs
note_lib/src/scale_lib/: mod.rs  scale.rs  (+2 more)
note_tools/: Cargo.toml
note_tools/src/: explore_root.rs  main.rs
print_note/: Cargo.toml
print_note/src/: main.rs
(+3 files in other folders)
