[package]
name = "chord_map_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
env_logger = "0.10.1"
chord_map_egui = { path = "../chord_map_egui" }
note_lib = { path = "../note_lib" }
uuid = { version = "1.6.1", features = ["v4", "js"] }
